-Now including demo\ folder with VizAlertsDemo.twb that includes a number of scenarios for both demo & test purposes
-Documentation for all of the above
-Removed edge condition where consolidated emails would not consolidate.
-Added initial code for support of TWB/TWBX downloads
-Added initial code for support of export to local filesystem
-VizAlerts.tdsx moved to demo\ folder
-Fixed issue with default config values for timeouts and retries not applying as expected (Issue #2)
-Fixed issue with alert tests using a 30s timeout rather than the correct value (Issue #3)
=================================

Version 1.0.8
=================================
-Documentation improvements
-Confusing copyright restrictions removed, LICENSE file contains license for all files
-Default configuration values altered to simplify testing
=================================

Version 1.0.7
=================================
-Fixed a regression in which caused alerts to fail on Tableau Server instances using local authentication
=================================

Version 1.0.6
=================================
-By default, Subscribers of alerts that fail for any reason will be notified via email (can be disabled in config)
-Failure emails are improved, with additional details added
-Advanced Alerts can now override the default VizAlerts footer
=================================

Version 1.0.5
=================================
-Fixed bug with handling HTTP errors during data exports: "'NoneType' object has no attribute 'status_code'"
-Fixed formatting bug with HTTP errors being reported in emails
-Fixed issue with viz.data.retrieval_tries setting in vizalerts.yaml file not working
-Fixed bug where Site support breaks if the site's Name differs from the ID
-Fixed bug where Subscribing to a view on a Site having a duplicate version on a separate Site causes logs and state file to rapidly increase in size.