@@ -18,8 +18,13 @@ Version 1.1.0
 -Added initial code for support of TWB/TWBX downloads
 -Added initial code for support of export to local filesystem
 -VizAlerts.tdsx moved to demo\ folder
+-Added config option for SMTP server port (Issue #15)
+-Added config option to ignore certificate check for SSL (Issue #5)
+-Fixed issue with trusted ticket failures error handling (Issue #4)
 -Fixed issue with default config values for timeouts and retries not applying as expected (Issue #2)
 -Fixed issue with alert tests using a 30s timeout rather than the correct value (Issue #3)
+-Fixed issue with alerts being processed for unlicesed users (Issue #13)
+-Fixed issue with file cleanup failures halting all alert processing (Issue #16)
 =================================
 
 Version 1.0.8
